--- a/README.rdoc
+++ b/README.rdoc
@@ -8,9 +8,9 @@ Particularly useful for using 3rd party or remote solr servers over http as ofte
 
 * Use rails initializer to create the sunspot session
 
-  require 'sunspot_rails'
-  # set the session to the delayed_job handler - this will send all model CRUD reindexing to delayed_job
-  Sunspot.session = Sunspot::SessionProxy::DelayedJobSessionProxy.new(Sunspot.session)
+  `require 'sunspot_rails'`
+    # set the session to the delayed_job handler - this will send all model CRUD reindexing to delayed_job
+    Sunspot.session = Sunspot::SessionProxy::DelayedJobSessionProxy.new(Sunspot.session)
   
 * Define your searchable blocks as usual in ActiveRecord models.
   class Model < ActiveRecord::Base
